--- a/style.css
+++ b/style.css
@@ -366,6 +366,12 @@ btn:hover {
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
+#box-4 .item img {
+  width: 100%;
+  height: 300px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
 
 .scheme-thumbnail-container {
   background: var(--light-bg);
