--- a/style.css
+++ b/style.css
@@ -417,7 +417,29 @@ btn:hover {
 
 
 
+.owl-nav button.owl-prev, .owl-nav button.owl-next {
+  background-color: #000; /* Circle background color */
+  color: #fff; /* Icon color */
+  border: none;
+  border-radius: 50%; /* Make it circular */
+  width: 50px; /* Adjust circle size */
+  height: 50px; /* Adjust circle size */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px; /* Adjust the icon size */
+  cursor: pointer;
+}
 
+.owl-nav button.owl-prev span, .owl-nav button.owl-next span {
+  font-size: 50px; /* Increase the size of the < and > */
+  line-height: 0.8; /* Ensure proper alignment */
+}
+
+.owl-nav button.owl-prev:hover, .owl-nav button.owl-next:hover {
+  background-color: #555; /* Change background on hover */
+  color: #fff; /* Icon color on hover */
+}
 
 
 /* ul li a {
