--- a/css/common.css
+++ b/css/common.css
@@ -42,3 +42,98 @@ border-radius: 8px;
   border: none;
   border: 1px solid #192f60;
 }
+
+
+
+.ism-hmBanner_marquee {
+  width: 100%;
+  background: #192F60;
+  z-index: 10;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -ms-box-orient: vertical;
+  box-orient: vertical;
+}
+.ism-hmBanner_marquee_label {
+  background: #192F60;
+  padding: 5px 30px;
+  background-size: 200% 200%;
+  animation: gradient 5s ease infinite;
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  font-family: "Playfair Display";
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  color: #fff;
+  font-weight: 550;
+}
+.ism-hmBanner_marquee_label p{
+  margin: 0;
+  font-size: 1.25rem;
+  font-family: "Playfair Display";
+  font-weight: 600;
+}
+.ism-hmBanner_marquee_value {
+  flex: 1;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  padding: 5px 0;
+}
+.ism-hmBanner_marquee_value a {
+  color: #fff;
+  font-size: .9375rem;
+  font-weight: 600
+}
+@media only screen and (min-width: 560px) {
+  .ism-hmBanner_marquee {
+      -webkit-flex-direction: row;
+      -moz-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -ms-box-orient: horizontal;
+      box-orient: horizontal;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      align-items: center;
+      background: #192F60
+      /* position: absolute;
+      bottom: 0;
+      left: 0; */
+  }
+  .ism-hmBanner_marquee_label {
+    width: auto;
+    padding: 10px 30px;
+    font-size: 1rem;
+}
+}
+@media only screen and (min-width: 768px) {
+  .ism-hmBanner_marquee_value a {
+      font-size: 1.05rem;
+  }
+}
