--- a/css/header.css
+++ b/css/header.css
@@ -88,7 +88,7 @@
 
 /*=============== VARIABLES CSS ===============*/
 :root {
-  --header-height: 3.5rem;
+  --header-height: 1.5rem;
 
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
@@ -153,8 +153,9 @@ a {
   left: 0;
   width: 100%;
   background-color: var(--secondary-color);
-  /* box-shadow: 0 2px 16px hsla(220, 32%, 8%, .3); */
+  box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
   z-index: var(--z-fixed);
+  
 }
 .header, ul{
   padding: 0;
@@ -246,6 +247,31 @@ a {
   .nav__logo img{
     height: 2.5rem;
   }
+   .nav__data {
+    width: 100%;
+    padding-left: 12px;
+  }
+  .nav__logo img{
+    height: 2.5rem;
+  }
+  .special-feature {
+    display: none;
+  }
+  .logo-container{
+    display: none;
+  }
+  .marquee-heading{
+    display: none;
+  }
+  .nav__logo img {
+    height: 3.5rem;
+}
+.nav__header {
+  height: 5rem;
+}
+.show-menu {
+  top: 5rem;
+}
 }
 
 .nav__link {
@@ -268,7 +294,7 @@ a {
 /* Show menu */
 .show-menu {
   opacity: 1;
-  top: 3.5rem;
+  top: 5rem;
   pointer-events: initial;
 }
 
@@ -371,6 +397,15 @@ border: 1px solid #192f60;
   .marquee-heading{
     display: none;
   }
+  .nav__logo img {
+    height: 3.5rem;
+}
+.nav__header {
+  height: 5rem;
+}
+.show-menu {
+  top: 5rem;
+}
 }
 
 /* For large devices */
@@ -439,7 +474,7 @@ border: 1px solid #192f60;
   }
   .dropdown__item:hover .dropdown__menu {
     opacity: 1;
-    top: 5.5rem;
+    top: 3.5rem;
     pointer-events: initial;
     transition: top .3s;
   }
@@ -448,11 +483,11 @@ border: 1px solid #192f60;
 
 
 .social-part img {
-  width: 35px;
-  height: 35px;
+  width: 2rem;
+  height: 2rem;
   margin-right: 3px;
 }
 .ism-header__main_box img{
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
 }
