--- a/css/pages/useful-links.css
+++ b/css/pages/useful-links.css
@@ -1,62 +1,6 @@
-/* 
-.ism-elem7__box.logo-box {
-  min-height: 150px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
+.useful-section {
+  background: #F3F6FD;
 }
-.ism-elem7__box.logo-box img {
-  -webkit-transition: all 0.6s ease;
-  -moz-transition: all 0.6s ease;
-  -ms-transition: all 0.6s ease;
-  -o-transition: all 0.6s ease;
-  transition: all 0.6s ease;
-}
-
-.ism-elem7__box {
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  background-clip: padding-box;
-  padding: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.09);
-  background-color: var(--light-bg);
-  margin-bottom: 20px;
-  height: -moz-calc(100% - 20px);
-  height: -webkit-calc(100% - 20px);
-  height: calc(100% - 20px);
-  position: relative;
-  border: 1px solid #192f60; 
-  border-radius: 8px;
-  word-wrap: break-word;
-  box-shadow: 0 4px 25px rgba(34, 86, 102, 0.07);
-}
-.ism-elem7__box:hover {
-  border: 1px solid #192f60;
-}
-.ism-elem7__box .caption {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: #F3F6FD;
-  padding: 10px;
-  color: #192F60;
-  font-size: 12px;
-  text-align: center;
-  width: 100%;
-  font-weight: 550;
-} */
-
 .ism-logo-box{
   background: #fff;
   border: 1px solid #192F60;
@@ -76,7 +20,7 @@
     color: #192f60;
     padding: 0.5rem;
     border-radius: 8px;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     font-weight: 500;
   }
 }
