--- a/style.css
+++ b/style.css
@@ -1123,14 +1123,15 @@ footer ul li a img {
 
 .hero-banner {
   position: sticky;
-  height: 100vh;
-  width: 100%;
+  height: 90vh;
+  width: 100vw;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   text-align: center;
+  object-fit: contain;
 }
 
 .hero-banner::before {
@@ -1143,6 +1144,7 @@ footer ul li a img {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7) 40%, rgba(0, 0, 0, 0.5) 90%);
   z-index: 1;
   pointer-events: none;
+  object-fit: contain;
 }
 
 .hero-video {
